Final (maybe) IE scrollbar fixes

--- a/resources/sass/cms.scss
+++ b/resources/sass/cms.scss
@@ -66,7 +66,8 @@ dl {
 }
 
 [data-bs-spy] {
-  overflow-y: scroll;
+  overflow: hidden;
+  overflow-y: auto;
   max-height: calc(100% - #{rem-calc(128)});
 }
 
